tests/pass/test_p2_medium.bb
float spike
float faye
float jet

spike = (2.0 ** 5.0) - (((1.0 / 2.0) ** -2.0) / 2.0)
faye = (spike - 5.0) / (15.0 % 10.0)
jet = spike / faye
say spike - jet + (faye - 0.9)
