tests/fail/fail_type_check.bb
float spike(bool x, int y, float z)
  if x
    say y
    return z * 2.0
  fin
fin

spike(2.3, 5, 2.1)
